--- a/scss/asc.scss
+++ b/scss/asc.scss
@@ -204,6 +204,7 @@ html {
 					float:left;
 					margin-left:-170px;
 					margin-right:30px;
+					top: 0;
 						& img {
 							position:fixed;
 							height:100%;
