--- a/scss/asc.css
+++ b/scss/asc.css
@@ -152,7 +152,8 @@ html {
         background-size: cover;
         float: left;
         margin-left: -170px;
-        margin-right: 30px; }
+        margin-right: 30px;
+        top: 0; }
         html body main figure.featured-image img {
           position: fixed;
           height: 100%; }
